--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,6 +9,26 @@
 <p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
 <p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
 <p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
+<h1>課堂筆記</h1>
+<p>將紀錄40723147 在CD2020當周課堂筆記</p>
+<p>----------------------------------------------------------------------------------------------------------------</p>
+<p><span style="background-color: #ffff99;"><strong>HTTP 與 HTTPS</strong></span></p>
+<p>字母<span style="background-color: #ff0000;">S</span>代表了網站使用編碼協定的安全性(secure)</p>
+<p>HTTP協定<span style="background-color: #00ffff;">不使用</span>加密協定‧</p>
+<p>反觀HTTPS協定，以<span style="background-color: #00ffff;">保密為前提</span>為研發‧</p>
+<p>是以加入SSL協定作為安全憑證，</p>
+<p>因此網站透過協定上的加密機制後能夠防止資料竊取者</p>
+<p>就算攔截到了傳輸資訊卻也無法直接看到傳輸中的資料</p>
+<p><strong></strong></p>
+<p><strong><span>HTTPS 是以安全為目的得 HTTP 通道，</span></strong></p>
+<p><strong><span>經由網站傳輸協定進行通訊和利用 SSL/TLS 憑證來加密封包</span></strong></p>
+<p><strong><span>參考資料:<a href="https://www.webdesigns.com.tw/SSLANDHTTPS.asp">https://www.webdesigns.com.tw/SSLANDHTTPS.asp</a></span></strong></p>
+<p><strong><span></span></strong></p>
+<p><strong><span style="background-color: #ffff99;">SSL協定</span></strong></p>
+<p><span style="background-color: #ffff99;"></span>SSL 為 <em class="ip">Secure Sockets Layer (安全通訊協定)</em> 的縮寫，</p>
+<p>後來發展成 Transport Layer Security，</p>
+<p>傳輸層安全協定 (TLS)；簡單說就是在通訊的過程中，</p>
+<p>透過特定的演算法把傳遞內容加密，</p>
+<p>防止內容被竊取或竄改。</p>
+<p>參考資料:<a href="https://medium.com/schaoss-blog/%E9%96%8B%E7%99%BC%E7%94%A8-ssl-%E8%87%AA%E7%B0%BD%E8%A8%AD%E5%AE%9A%E6%B5%81%E7%A8%8B-3c41b3a46618">網址</a></p>
+<div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div>
