--- a/content/課堂筆記.html
+++ b/content/課堂筆記.html
@@ -156,7 +156,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
-<p>----------------------------------------------------------------------------------------------------------------</p>
+<p><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></p>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
 <p><span style="background-color: #ffff99;"><strong>HTTP 與 HTTPS</strong></span></p>
 <p>字母<span style="background-color: #ff0000;">S</span>代表了網站使用編碼協定的安全性(secure)</p>
@@ -177,7 +177,9 @@ img.add_border {
 <p>透過特定的演算法把傳遞內容加密，</p>
 <p>防止內容被竊取或竄改。</p>
 <p>參考資料:<a href="https://medium.com/schaoss-blog/%E9%96%8B%E7%99%BC%E7%94%A8-ssl-%E8%87%AA%E7%B0%BD%E8%A8%AD%E5%AE%9A%E6%B5%81%E7%A8%8B-3c41b3a46618">網址</a></p>
-<div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div><br />About << <a href='About.html'>Previous</a> </div>
+<div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div>
+<div></div>
+<div><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></div><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
