--- a/content/課堂筆記.html
+++ b/content/課堂筆記.html
@@ -179,7 +179,30 @@ img.add_border {
 <p>參考資料:<a href="https://medium.com/schaoss-blog/%E9%96%8B%E7%99%BC%E7%94%A8-ssl-%E8%87%AA%E7%B0%BD%E8%A8%AD%E5%AE%9A%E6%B5%81%E7%A8%8B-3c41b3a46618">網址</a></p>
 <div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div>
 <div></div>
-<div><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></div><br />About << <a href='About.html'>Previous</a> </div>
+<div><span style="color: #ffffff; background-color: #00ff00;">--------------------------<span style="background-color: #ff00ff;">-------------------<span style="background-color: #00ff00;">-----------------</span>-------------------</span>-------------------------------</span></div>
+<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
+<div><strong><span style="color: #333333; background-color: #ffff99;">Dart</span></strong></div>
+<p><span style="background-color: #00ffff;">開放原始碼程式語言</span>，由Google主導開發，於2011年10月公開。它的開發團隊由</p>
+<p>Google Chrome瀏覽器V8引擎團隊的領導者拉爾斯·巴克主持，目標在於成為下一代</p>
+<p>結構化Web開發語言。</p>
+<p><span style="background-color: #00ffff;">類似JavaScript</span>，<span style="background-color: #00ffff;">Dart也是一種物件導向語言</span>，但是它採用類別為基的程式設計。它</p>
+<p>只允許單一繼承，<span style="background-color: #00ffff;">語法風格接近C語言</span>。</p>
+<p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Dart">https://zh.wikipedia.org/zh-tw/Dart</a></p>
+<p><span color="#333333" style="color: #333333;"><span style="background-color: #ffff99;"><b>python</b></span></span><span color="#333333" style="color: #333333;"><br/></span></p>
+<p><span color="#333333" style="color: #333333;">是一種<span style="background-color: #00ffff;">廣泛使用</span>的直譯式、進階程式、通用型程式語言，由吉多·范羅蘇姆創造，第</span></p>
+<p><span color="#333333" style="color: #333333;">一版釋出於1991年。可以視之為一種改良（加入一些其他程式語言的優點，如物件</span></p>
+<p><span color="#333333" style="color: #333333;">導向）的LISP。<span style="background-color: #00ffff;">Python的設計哲學強調代碼的可讀性和簡潔的語法</span>（尤其</span></p>
+<p><span color="#333333" style="color: #333333;">是使用空格縮排劃分代碼塊，而非使用大括號或者關鍵詞）。相比於C++或Java，</span></p>
+<p><span color="#333333" style="color: #333333;">Python讓開發者<span style="background-color: #00ffff;">能夠用更少的代碼表達想法</span>。不管是小型還是大型程式，該語言都</span></p>
+<p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
+<p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
+<p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
+<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
+<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
+<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
+<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
+<div></div>
+<div><span style="color: #ffffff; background-color: #00ff00;"></span></div><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
