add reveal W2 work

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,15 +39,68 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## CD2020 AG4 亂數分組
 
-### KMOLab
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+ [40723147](https://github.com/s40723147/cd2020)
 </small>
 
-[CMSimfly 網誌](./../blog/index.html)
+
+
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+## 須先了解
+
+* HTTP 與 HTTPS
+
+<small>
+HTTP協定不使用加密協定‧
+</small>
+
+<small>
+HTTPS協定以保密為前提為研發‧
+</small>
+* SSL協定
+
+<small>
+透過特定的演算法把傳遞內容加密，防止內容被竊取或竄改。
+</small>
+
+
+
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+## 程式內容包刮了
+
+* Dart
+
+<small>
+類似JavaScript，Dart也是一種物件導向語言‧
+</small>
+
+<small>
+語法風格接近C語言。
+</small>
+* python
+
+<small>
+Python的設計哲學強調代碼的可讀性和簡潔的語法
+</small>
+
+<small>
+能夠用更少的代碼表達想法。
+</small>
 
 
     </script>
