--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a></li>
+                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a></li>
                       </ul>
                 </nav>
               </div>
