--- a/content/亂數分組.html
+++ b/content/亂數分組.html
@@ -154,51 +154,68 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組<br /><h1>課堂筆記</h1>
-<p>將紀錄40723147 在CD2020當周課堂筆記</p>
-<p><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></p>
-<h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
-<p><span style="background-color: #ffff99;"><strong>HTTP 與 HTTPS</strong></span></p>
-<p>字母<span style="background-color: #ff0000;">S</span>代表了網站使用編碼協定的安全性(secure)</p>
-<p>HTTP協定<span style="background-color: #00ffff;">不使用</span>加密協定‧</p>
-<p>反觀HTTPS協定，以<span style="background-color: #00ffff;">保密為前提</span>為研發‧</p>
-<p>是以加入SSL協定作為安全憑證，</p>
-<p>因此網站透過協定上的加密機制後能夠防止資料竊取者</p>
-<p>就算攔截到了傳輸資訊卻也無法直接看到傳輸中的資料</p>
-<p><strong></strong></p>
-<p><strong><span>HTTPS 是以安全為目的得 HTTP 通道，</span></strong></p>
-<p><strong><span>經由網站傳輸協定進行通訊和利用 SSL/TLS 憑證來加密封包</span></strong></p>
-<p><strong><span>參考資料:<a href="https://www.webdesigns.com.tw/SSLANDHTTPS.asp">https://www.webdesigns.com.tw/SSLANDHTTPS.asp</a></span></strong></p>
-<p><strong><span></span></strong></p>
-<p><strong><span style="background-color: #ffff99;">SSL協定</span></strong></p>
-<p><span style="background-color: #ffff99;"></span>SSL 為 <em class="ip">Secure Sockets Layer (安全通訊協定)</em> 的縮寫，</p>
-<p>後來發展成 Transport Layer Security，</p>
-<p>傳輸層安全協定 (TLS)；簡單說就是在通訊的過程中，</p>
-<p>透過特定的演算法把傳遞內容加密，</p>
-<p>防止內容被竊取或竄改。</p>
-<p>參考資料:<a href="https://medium.com/schaoss-blog/%E9%96%8B%E7%99%BC%E7%94%A8-ssl-%E8%87%AA%E7%B0%BD%E8%A8%AD%E5%AE%9A%E6%B5%81%E7%A8%8B-3c41b3a46618">網址</a></p>
-<div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div>
+    <div id="tipue_search_content">課堂筆記 << <a href='課堂筆記.html'>Previous</a> <br /><h1>亂數分組</h1>
+<p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
+groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]
+
+group=groupList[0]
+#將group數列隨機排列
+random.shuffle(group)
+#列印數列
+print(group)
+#列印數列(1~12)
+print(group[0:12])
+#列印數列(13~24)
+print(group[12:24])
+#列印數列(25~36)
+print(group[24:36])
+#列印數列(37~49)
+print(group[36:49])</pre>
+<p><span style="background-color: #000000; color: #ffffff;"></span>使用python編寫亂數分組程式</p>
+<p>[Python]-隨機random函數</p>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random</pre>
+<span style="color: #ffffff; background-color: #00ff00;"><br/></span>匯入 <span>隨機random函數</span></div>
+<div><span></span></div>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false;first-line:5" contenteditable="false">groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]</pre>
+</div>
+<div>定義 groupList=所有修課學生 共49位</div>
 <div></div>
-<div><span style="color: #ffffff; background-color: #00ff00;">--------------------------<span style="background-color: #ff00ff;">-------------------<span style="background-color: #00ff00;">-----------------</span>-------------------</span>-------------------------------</span></div>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">group=groupList[0]</pre>
+</div>
+<div>設定變數group=groupList[0] </div>
+<div></div>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">random.shuffle(group)</pre>
+</div>
+<div><span style="color: #ffffff;"><span style="color: #000000;">使用 random.shuffle</span><br/><br/><span style="color: #000000;">主要運用在將函數中的順序</span>打亂</span></div>
+<div><span style="color: #ffffff;"></span></div>
 <div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
-<div><strong><span style="color: #333333; background-color: #ffff99;">Dart</span></strong></div>
-<p><span style="background-color: #00ffff;">開放原始碼程式語言</span>，由Google主導開發，於2011年10月公開。它的開發團隊由</p>
-<p>Google Chrome瀏覽器V8引擎團隊的領導者拉爾斯·巴克主持，目標在於成為下一代</p>
-<p>結構化Web開發語言。</p>
-<p><span style="background-color: #00ffff;">類似JavaScript</span>，<span style="background-color: #00ffff;">Dart也是一種物件導向語言</span>，但是它採用類別為基的程式設計。它</p>
-<p>只允許單一繼承，<span style="background-color: #00ffff;">語法風格接近C語言</span>。</p>
-<p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Dart">https://zh.wikipedia.org/zh-tw/Dart</a></p>
-<p><span color="#333333" style="color: #333333;"><span style="background-color: #ffff99;"><b>python</b></span></span><span color="#333333" style="color: #333333;"><br/></span></p>
-<p><span color="#333333" style="color: #333333;">是一種<span style="background-color: #00ffff;">廣泛使用</span>的直譯式、進階程式、通用型程式語言，由吉多·范羅蘇姆創造，第</span></p>
-<p><span color="#333333" style="color: #333333;">一版釋出於1991年。可以視之為一種改良（加入一些其他程式語言的優點，如物件</span></p>
-<p><span color="#333333" style="color: #333333;">導向）的LISP。<span style="background-color: #00ffff;">Python的設計哲學強調代碼的可讀性和簡潔的語法</span>（尤其</span></p>
-<p><span color="#333333" style="color: #333333;">是使用空格縮排劃分代碼塊，而非使用大括號或者關鍵詞）。相比於C++或Java，</span></p>
-<p><span color="#333333" style="color: #333333;">Python讓開發者<span style="background-color: #00ffff;">能夠用更少的代碼表達想法</span>。不管是小型還是大型程式，該語言都</span></p>
-<p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
-<p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
-<p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
-<p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<br />About << <a href='About.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
+<div>將函數(<span>group)的順序打亂</span></div>
+<div><span></span></div>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#列印數列
+print(group)
+#列印數列(1~12)
+print(group[0:12])
+#列印數列(13~24)
+print(group[12:24])
+#列印數列(25~36)
+print(group[24:36])
+#列印數列(37~49)
+print(group[36:49])</pre>
+<span><br/></span></div>
+<div><span style="color: #000000;"></span></div>
+<div><span style="color: #000000;">print 列印運用</span></div>
+<div><span style="color: #000000;"><br/><br/>參考資料:<a href="https://nkust.gitbook.io/python/untitled">https://nkust.gitbook.io/python/untitled</a></span></div>
+<div><span style="color: #000000;"></span></div>
+<div><span style="color: #000000; background-color: #ffff00;">測試1</span></div>
+<div><span style="color: #000000;"><img alt="" height="190" src="./../images/範例1.png" width="1277"/></span></div>
+<div><span style="color: #000000;"></span></div>
+<div><span style="color: #000000;">標示 1 2 3 4 組</span></div><br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
