add python 亂數分組 未來目標

--- a/config/content.htm
+++ b/config/content.htm
@@ -52,8 +52,7 @@
 <p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
-<p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<h1>亂數分組</h1>
+<p><span style="background-color: #000000; color: #ffffff;"></span></p><h1>亂數分組</h1>
 <p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
 groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]
@@ -115,3 +114,18 @@ print(group[36:49])</pre>
 <div><span style="color: #000000;"><img alt="" height="190" src="/images/範例1.png" width="1277"/></span></div>
 <div><span style="color: #000000;"></span></div>
 <div><span style="color: #000000;">標示 1 2 3 4 組</span></div>
+<div><hr/>
+<p><strong>持續進步</strong></p>
+<p>1.可更進一步的對話視窗</p>
+<p>    依照客戶需求給定特定變數完成亂數抽取</p>
+<p>    例如<span>:</span>給定組別、人數、或是其他條件</p>
+<p>2.網頁的程序運用</p>
+<p>       能夠再遠端直接作抽取動作不必下載</p>
+<p>       可更加方便簡潔快速的抽取方式</p>
+<p>3.在網頁上抓取資料</p>
+<p>       能夠在網頁上擷取或是引用資料</p>
+<p>       直接傳達到亂數程序上提供更方便的服務</p>
+<p>4.資料庫存取</p>
+<p>       完成亂數程序後是否可以</p>
+<p>       直接作存取或是匯出動作</p>
+</div>
