--- a/content/亂數分組.html
+++ b/content/亂數分組.html
@@ -215,7 +215,22 @@ print(group[36:49])</pre>
 <div><span style="color: #000000; background-color: #ffff00;">測試1</span></div>
 <div><span style="color: #000000;"><img alt="" height="190" src="./../images/範例1.png" width="1277"/></span></div>
 <div><span style="color: #000000;"></span></div>
-<div><span style="color: #000000;">標示 1 2 3 4 組</span></div><br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> </div>
+<div><span style="color: #000000;">標示 1 2 3 4 組</span></div>
+<div><hr/>
+<p><strong>持續進步</strong></p>
+<p>1.可更進一步的對話視窗</p>
+<p>    依照客戶需求給定特定變數完成亂數抽取</p>
+<p>    例如<span>:</span>給定組別、人數、或是其他條件</p>
+<p>2.網頁的程序運用</p>
+<p>       能夠再遠端直接作抽取動作不必下載</p>
+<p>       可更加方便簡潔快速的抽取方式</p>
+<p>3.在網頁上抓取資料</p>
+<p>       能夠在網頁上擷取或是引用資料</p>
+<p>       直接傳達到亂數程序上提供更方便的服務</p>
+<p>4.資料庫存取</p>
+<p>       完成亂數程序後是否可以</p>
+<p>       直接作存取或是匯出動作</p>
+</div><br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
