--- a/content/課堂筆記.html
+++ b/content/課堂筆記.html
@@ -197,8 +197,7 @@ img.add_border {
 <p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
-<p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<br />About << <a href='About.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
+<p><span style="background-color: #000000; color: #ffffff;"></span></p><br />About << <a href='About.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
         
     <!-- footer -->
       <div class="container">
