--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -52,8 +52,7 @@
 <p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
-<p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<h1>亂數分組</h1>
+<p><span style="background-color: #000000; color: #ffffff;"></span></p><h1>亂數分組</h1>
 <p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
 groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]
