Industrial And EngineeringProduct 協同設計-摘要

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -52,7 +52,9 @@
 <p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
-<p><span style="background-color: #000000; color: #ffffff;"></span></p><h1>亂數分組</h1>
+<p><span style="background-color: #000000; color: #ffffff;"></span></p>
+<h1>亂數分組</h1>
+<h4><strong><a href="https://github.com/s40723147/cd2020/blob/master/PDF/cd2020%20ag2%20Project%201%20%E4%BA%82%E6%95%B8%E5%88%86%E7%B5%84.pdf">pdf連結</a></strong></h4>
 <p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
 groupList=[['40723104', '40723107', '40723114', '40723115', '40723118', '40723122', '40723123', '40723140', '40723149', '40723151', '40723153', '40723154', '40723155', '40623143', '40723108', '40723127', '40723132', '40723133', '40723137', '40723141', '40723143', '40723144', '40723147', '40723148', '40723150', '40723103', '40723110', '40723112', '40723120', '40723125', '40723126', '40723128', '40723130', '40723139', '40723142', '40723145', '40723146', '40423155', '40723101', '40723102', '40723106', '40723111', '40723119', '40723121', '40723124', '40723134', '40723135', '40723136', '40723138']]
@@ -128,4 +130,17 @@ print(group[36:49])</pre>
 <p>4.資料庫存取</p>
 <p>       完成亂數程序後是否可以</p>
 <p>       直接作存取或是匯出動作</p>
-</div>
+<h1>電子書重點整理</h1>
+<p style="text-align: center;"><br/><strong>Industrial And </strong><strong>EngineeringProduct </strong><strong>DesignCollaboration</strong></p>
+<p style="text-align: center;"><strong>工業和工程產品-設計協同</strong></p>
+<p>Collaborative product design processes of industrial design and engineering design in consumer product companies<br/>工業設計與工程設計消費品公司的協同產品設計過程</p>
+<p><br/>This study aims to elucidate how industrial designers and engineering designers collaborate, and how such an alliance reflects in the design process. We conducted in-depth interviews about actual product design projects with 34 industrial and engineering designers from six consumer product manufacturers.</p>
+<p>這項研究旨在闡明工業設計師和工程設計師如何協作，以及這種聯盟如何體現在設計過程中。 我們與來自六個消費產品製造商的34名工業和工程設計師進行了有關實際產品設計項目的深入採訪。</p>
+<p>It is often argued that engineering designers use an ‘outward approach e developing from function to appearance’ whereas industrial designers follow an ‘inward approach e developing from appearance to functions’</p>
+<p><br/>人們通常認為，工程設計師使用“從功能到外觀開發的外向方法”，而工業設計師則採用“從外觀到功能開發的內向方法”</p>
+<p>providing initial requirements for industrial designers’ responsibilities. In or-der to succeed in a highly competitive market, companies should create collaborative processes of industrial design and engineering design by prop-erly adopting outside-in and inside-out approaches to match their situations and objectives.</p>
+<p>為工業設計師的職責提供初步要求。為了在競爭激烈的市場中取得成功，公司應通過適當地採用從內而外的方法來匹配其情況和目標，從而創建工業設計和工程設計的協作過程。</p>
+<p>This paper serves two goals: firstly, to shed light on the form of the original collaborative product design process applied in practice, and secondly to determine different types of processes used for different purposes under different conditions.</p>
+<p>本文有兩個目標：首先，闡明在實踐中應用的原始協作產品設計過程的形式；其次，確定在不同條件下用於不同目的的不同類型的過程。</p>
+<p>The recurring term ‘collaborative product design’ throughout this article refers to a product design created by the collaborative contribution of industrial design and engineering design.</p>
+<p>在本文中，“協作產品設計”的重複用語是指通過工業設計和工程設計的共同貢獻而創建的產品設計。</p></div>
