--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -142,7 +142,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a></li>
+                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
                       </ul>
                 </nav>
               </div>
@@ -153,4 +153,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a><li><a href='電子書重點整理.html'>電子書重點整理</a></li></ul></section></div></body></html>
