--- a/content/電子書重點整理.html
+++ b/content/電子書重點整理.html
@@ -154,18 +154,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='課堂筆記.html'>Next</a> >> 課堂筆記<br /><h1>About</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br /> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
+    <div id="tipue_search_content">亂數分組 << <a href='亂數分組.html'>Previous</a> <br /><h1>電子書重點整理</h1>
+<p style="text-align: center;"><br/><strong>Industrial And </strong><strong>EngineeringProduct </strong><strong>DesignCollaboration</strong></p>
+<p style="text-align: center;"><strong>工業和工程產品-設計協同</strong></p>
+<p style="text-align: center;"><strong>摘要</strong></p>
+<p>Collaborative product design processes of industrial design and engineering design in consumer product companies</p>
+<p>工業設計與工程設計消費品公司的協同產品設計過程</p>
+<p><br/>This study aims to elucidate how industrial designers and engineering designers collaborate, and how such an alliance reflects in the design process. We conducted in-depth interviews about actual product design projects with 34 industrial and engineering designers from six consumer product manufacturers.</p>
+<p>這項研究旨在闡明工業設計師和工程設計師如何協作，以及這種聯盟如何體現在設計過程中。 我們與來自六個消費產品製造商的34名工業和工程設計師進行了有關實際產品設計項目的深入採訪。</p>
+<p>It is often argued that engineering designers use an ‘outward approach e developing from function to appearance’ whereas industrial designers follow an ‘inward approach e developing from appearance to functions’</p>
+<p><br/>人們通常認為，工程設計師使用“從功能到外觀開發的外向方法”，而工業設計師則採用“從外觀到功能開發的內向方法”</p>
+<p>providing initial requirements for industrial designers’ responsibilities. In or-der to succeed in a highly competitive market, companies should create collaborative processes of industrial design and engineering design by prop-erly adopting outside-in and inside-out approaches to match their situations and objectives.</p>
+<p>為工業設計師的職責提供初步要求。為了在競爭激烈的市場中取得成功，公司應通過適當地採用從內而外的方法來匹配其情況和目標，從而創建工業設計和工程設計的協作過程。</p>
+<p>This paper serves two goals: firstly, to shed light on the form of the original collaborative product design process applied in practice, and secondly to determine different types of processes used for different purposes under different conditions.</p>
+<p>本文有兩個目標：首先，闡明在實踐中應用的原始協作產品設計過程的形式；其次，確定在不同條件下用於不同目的的不同類型的過程。</p>
+<p>The recurring term ‘collaborative product design’ throughout this article refers to a product design created by the collaborative contribution of industrial design and engineering design.</p>
+<p>在本文中，“協作產品設計”的重複用語是指通過工業設計和工程設計的共同貢獻而創建的產品設計。</p></div><br />亂數分組 << <a href='亂數分組.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
