--- a/content/亂數分組.html
+++ b/content/亂數分組.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a></li>
+                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">課堂筆記 << <a href='課堂筆記.html'>Previous</a> <br /><h1>亂數分組</h1>
+    <div id="tipue_search_content">課堂筆記 << <a href='課堂筆記.html'>Previous</a> <a href='電子書重點整理.html'>Next</a> >> 電子書重點整理<br /><h1>亂數分組</h1>
 <h4><strong><a href="https://github.com/s40723147/cd2020/blob/master/PDF/cd2020%20ag2%20Project%201%20%E4%BA%82%E6%95%B8%E5%88%86%E7%B5%84.pdf">pdf連結</a></strong></h4>
 <p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
@@ -231,7 +231,7 @@ print(group[36:49])</pre>
 <p>4.資料庫存取</p>
 <p>       完成亂數程序後是否可以</p>
 <p>       直接作存取或是匯出動作</p>
-</div><br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> </div>
+<br />課堂筆記 << <a href='課堂筆記.html'>Previous</a> <a href='電子書重點整理.html'>Next</a> >> 電子書重點整理</div>
         
     <!-- footer -->
       <div class="container">
