Industrial And EngineeringProduct 協同設計-章節1-1

--- a/config/content.htm
+++ b/config/content.htm
@@ -145,4 +145,74 @@ print(group[36:49])</pre>
 <p>This paper serves two goals: firstly, to shed light on the form of the original collaborative product design process applied in practice, and secondly to determine different types of processes used for different purposes under different conditions.</p>
 <p>本文有兩個目標：首先，闡明在實踐中應用的原始協作產品設計過程的形式；其次，確定在不同條件下用於不同目的的不同類型的過程。</p>
 <p>The recurring term ‘collaborative product design’ throughout this article refers to a product design created by the collaborative contribution of industrial design and engineering design.</p>
-<p>在本文中，“協作產品設計”的重複用語是指通過工業設計和工程設計的共同貢獻而創建的產品設計。</p></div>
+<p>在本文中，“協作產品設計”的重複用語是指通過工業設計和工程設計的共同貢獻而創建的產品設計。</p>
+<hr/>
+<p><strong></strong></p>
+<div><strong></strong></div>
+<div style="text-align: left;"><span style="color: #000000; background-color: #ffff00;"><strong>章節一</strong></span></div>
+<div style="text-align: left;"><strong></strong></div>
+<div style="text-align: left;"><strong></strong></div>
+<div><strong>Research approach (研究方法)</strong>
+<p style="text-align: left;">we adopted three criteria for selecting research targets:</p>
+<p style="text-align: left;">我們採用了三個標準來選擇研究目標：</p>
+<table style="width: 531.8px;">
+<tbody>
+<tr style="height: 47px;">
+<td style="height: 47px; width: 529.8px;"><span style="background-color: #ffcc99;">(1) multiple companies in a similar product domain;</span></td>
+</tr>
+<tr style="height: 47px;">
+<td style="height: 47px; width: 529.8px;"><span style="background-color: #ffcc99;">(2) multiple participants from both engineering and industrial design departments;</span></td>
+</tr>
+<tr style="height: 47px;">
+<td style="height: 47px; width: 529.8px;"><span style="background-color: #ffcc99;">(3)projects already completed through a whole product development cycle.</span></td>
+</tr>
+<tr style="height: 47.8px;">
+<td style="height: 47.8px; width: 529.8px;"><span style="background-color: #ffcc99;">（1）多個產品領域相似的公司</span></td>
+</tr>
+<tr style="height: 47px;">
+<td style="height: 47px; width: 529.8px;"><span style="background-color: #ffcc99;">（2）來自工程和工業設計部門的多名參與者</span></td>
+</tr>
+<tr style="height: 47px;">
+<td style="height: 47px; width: 529.8px;"><span style="background-color: #ffcc99;">（3）在整個產品開發週期中已經完成的項目。</span></td>
+</tr>
+</tbody>
+</table>
+<p style="text-align: left;"></p>
+<p style="text-align: left;">1.1 In-depth interview(深度訪談)</p>
+<p style="text-align: left;">1.1.1 Selection of case companies(案例公司的選擇)</p>
+<p style="text-align: left;">criteria adopted are as follows:</p>
+<p style="text-align: left;">採用的標準如下：</p>
+<p style="text-align: left;">1) The companies should produce mid-complex electronic consumer products.</p>
+<p style="text-align: left;">1）公司應生產中等複雜的電子消費產品。</p>
+<p style="text-align: left;">2) They should have independent industrial design and engineering design departments</p>
+<p style="text-align: left;">2）他們應該有獨立的工業設計和工程設計部門</p>
+<p style="text-align: left;">3) They should be leading companies in the market producing well-designed high-quality products</p>
+<p style="text-align: left;">3）他們應該是市場領先的公司，生產精心設計的高質量產品</p>
+<p style="text-align: left;">The first criterion enabled the selection of manufacturers with similar in product domain context wherein both industrial designers and engineering designers play important roles.</p>
+<p style="text-align: left;">第一條標準使得能夠選擇在產品領域中具有相似地位的製造商，其中工業設計師和工程設計師都扮演著重要角色。</p>
+<p style="text-align: left;">Manufactures producing simple consumer products will require a lesser role from engineering designers.</p>
+<p style="text-align: left;">生產簡單消費品的製造商在工程設計師中的作用將減少。</p>
+<p style="text-align: left;"><br/>1.1.2 Selection of interviewees(選擇受訪者)</p>
+<p style="text-align: left;">1) More than two years of experience in the company</p>
+<p style="text-align: left;">1）兩年以上的公司經驗</p>
+<p style="text-align: left;">2) Engagement in at least one cycle of the product development process</p>
+<p style="text-align: left;">2）參與產品開發過程的至少一個週期</p>
+<p style="text-align: left;">3) Close collaboration and interaction with counterparts (i.e. industrial designers vs. engineering designers)</p>
+<p style="text-align: left;">3）與同行（即工業設計師與工程設計師）的緊密協作和互動</p>
+<p style="text-align: left;">1.1.3 Interview procedure(面試程序)</p>
+<p style="text-align: left;">We firstly listed about 20 detailed questions and grouped them into four main themes:</p>
+<p style="text-align: left;">  我們首先列出了約20個詳細問題，並將其分為四個主要主題：</p>
+<p style="text-align: left;"><span style="background-color: #ffff00;">1) personal information,     <span style="background-color: #33cccc;">  1）個人信息，</span></span><br/> <span style="background-color: #ffff00;"><span style="background-color: #33cccc;">2) design process,             </span>  2）設計過程，</span><br/> <span style="background-color: #ffff00;">3) role and expertise         </span><span style="background-color: #33cccc;">   3）角色和專業知識</span><br/> <span style="background-color: #33cccc;">4) interaction.                   </span><span style="background-color: #ffff00;">    4）互動。             </span></p>
+<p style="text-align: left;">We then formulated four key questions:</p>
+<p style="text-align: left;">然後，我們提出了四個關鍵問題：</p>
+<p style="text-align: left;">1) What is your position and role in the team?</p>
+<p style="text-align: left;">1）您在團隊中的職位和角色是什麼？</p>
+<p style="text-align: left;">2) How did the product design process proceed and what happened during the process?</p>
+<p style="text-align: left;">2）產品設計過程如何進行？過程中發生了什麼？</p>
+<p style="text-align: left;">3) What tasks did you have in the design process, and what knowledge and skills you had required to carry out the projects?</p>
+<p style="text-align: left;">3）您在設計過程中擁有哪些任務，以及執行項目所需的知識和技能？</p>
+<p style="text-align: left;">4) How did industrial design(ers) and engineering design(ers) interact with each other during the design process?</p>
+<p style="text-align: left;">4）工業設計和工程設計在設計過程中如何相互影響？</p>
+<p style="text-align: left;">The interview started with the first question about interviewees’ roles in their teams and working experiences, followed by the product development</p>
+<p style="text-align: left;">訪談首先要了解的問題是受訪者在團隊中的角色和工作經驗，然後是產品開發‧</p>
+</div></div>
