add w6 筆記 OBS串流問題

--- a/config/content.htm
+++ b/config/content.htm
@@ -7,7 +7,7 @@
 <p>cd2020ag2 page:<a href="https://s40723150.github.io/cd2020ag2/content/index.html">https://s40723150.github.io/cd2020ag2/content/index.html</a></p>
 <h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
-<p><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></p>
+<hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
 <p><span style="background-color: #ffff99;"><strong>HTTP 與 HTTPS</strong></span></p>
 <p>字母<span style="background-color: #ff0000;">S</span>代表了網站使用編碼協定的安全性(secure)</p>
@@ -30,8 +30,7 @@
 <p>參考資料:<a href="https://medium.com/schaoss-blog/%E9%96%8B%E7%99%BC%E7%94%A8-ssl-%E8%87%AA%E7%B0%BD%E8%A8%AD%E5%AE%9A%E6%B5%81%E7%A8%8B-3c41b3a46618">網址</a></p>
 <div>參考步驟:<a href="https://blog.cssuen.tw/create-a-self-signed-certificate-using-openssl-240c7b0579d3">網址</a></div>
 <div></div>
-<div><span style="color: #ffffff; background-color: #00ff00;">--------------------------<span style="background-color: #ff00ff;">-------------------<span style="background-color: #00ff00;">-----------------</span>-------------------</span>-------------------------------</span></div>
-<div><span style="color: #ffffff; background-color: #00ff00;"></span></div>
+<div><hr/><span style="color: #ffffff; background-color: #00ff00;"><br/></span></div>
 <div><strong><span style="color: #333333; background-color: #ffff99;">Dart</span></strong></div>
 <p><span style="background-color: #00ffff;">開放原始碼程式語言</span>，由Google主導開發，於2011年10月公開。它的開發團隊由</p>
 <p>Google Chrome瀏覽器V8引擎團隊的領導者拉爾斯·巴克主持，目標在於成為下一代</p>
@@ -47,9 +46,28 @@
 <p><span color="#333333" style="color: #333333;">Python讓開發者<span style="background-color: #00ffff;">能夠用更少的代碼表達想法</span>。不管是小型還是大型程式，該語言都</span></p>
 <p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
-<p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
-<p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<h1><span style="color: #000000;">Assignment 1</span></h1>
+<hr/>
+<p><span style="background-color: #000000; color: #ffffff;"></span>W6</p>
+<p>OBS串流直播問題:</p>
+<p>Q:建立OBS與youtube聯繫無法串流</p>
+<p>nvidia處理器與OBS對應路徑抓取問題</p>
+<p>(同時也適用使用OBS串流直播時顯示器讀取畫面為黑頻)</p>
+<p>A:在nvidia中→管理3D設定→程式設定→若無OBSprotabie請先新增進入選項</p>
+<p>然後再將慣用處理器更改為"整合圖形"</p>
+<p>回到OBSprotable再次選取顯示器擷取變可抓取到顯示器畫面</p>
+<p><img alt="" height="290" src="/images/nvidia 設定.png" width="420"/></p>
+<p>Q:OBS在建立串流時無法輸出</p>
+<p>A:將OBSprotable中→設定→輸出→編碼器更換成(軟體編碼x264)</p>
+<p><img alt="" height="114" src="/images/obsprotable X264.png" width="539"/></p>
+<p></p>
+<p><span>x264(軟體</span><span>) </span>功能</p>
+<p><br/>x264提供了命令行介面以及應用程式介面（API）。前者在許多圖形用戶介面軟體中得到應用，如Staxrip和MeGUI。後者也在許多其他類型到軟體中調用，如HandBrake和FFmpeg。</p>
+<p>x264具備的H.264標準定義的特性，較之其他H.264編碼器而言多出許多。H.264編碼器之間的特性比較，可以參見：</p>
+<p>更多資訊：H.264 § Software encoder feature comparison<br/>x264包含有一些心理視覺增強技術，以增強編碼影片的主觀品質。</p>
+<p>x264能夠在普通計算機上實現多路高畫質影片的實時編碼。</p>
+<p>x264也是第一個免費的藍光影片編碼器。2010年4月，x264項目組宣布藍光格式影片編碼功能完成，使得x264成為首個免費的藍光影片編碼器。</p>
+<p>資料來源: <a href="https://zh.wikipedia.org/wiki/X264">https://zh.wikipedia.org/wiki/X264</a> (Wiki)</p>
+<p></p><h1>Assignment 1</h1>
 <h2>亂數分組</h2>
 <h4><strong><a href="https://github.com/s40723147/cd2020/blob/master/PDF/cd2020%20ag2%20Project%201%20%E4%BA%82%E6%95%B8%E5%88%86%E7%B5%84.pdf">pdf連結</a></strong></h4>
 <p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
