add Project One-onshape 繪製四輪小車

--- a/content/課堂筆記.html
+++ b/content/課堂筆記.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='簡介.html'>簡介</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment 1.html'>Assignment 1</a><ul class='dropdown'><li><a href='亂數分組.html'>亂數分組</a></li></ul><li class='has-children'><a href='Assignment 2.html'>Assignment 2</a><ul class='dropdown'><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment.html'>Assignment</a><ul class='dropdown'><li><a href='Assignment 1.html'>Assignment 1</a><li><a href='Assignment 2.html'>Assignment 2</a></li></ul><li><a href='Project One.html'>Project One</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">簡介 << <a href='簡介.html'>Previous</a> <a href='Assignment 1.html'>Next</a> >> Assignment 1<br /><h1>課堂筆記</h1>
+    <div id="tipue_search_content">簡介 << <a href='簡介.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment<br /><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <hr/>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -196,7 +196,7 @@ img.add_border {
 <p><span color="#333333" style="color: #333333;">試圖讓程式的結構清晰明瞭。</span></p>
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <hr/>
-<p><span style="background-color: #000000; color: #ffffff;"></span>W6</p>
+<h4><span style="background-color: #000000; color: #ffffff;"></span><span style="background-color: #0000ff; color: #ffffff;"><strong>W6</strong></span></h4>
 <p>OBS串流直播問題:</p>
 <p>Q:建立OBS與youtube聯繫無法串流</p>
 <p>nvidia處理器與OBS對應路徑抓取問題</p>
@@ -216,7 +216,7 @@ img.add_border {
 <p>x264能夠在普通計算機上實現多路高畫質影片的實時編碼。</p>
 <p>x264也是第一個免費的藍光影片編碼器。2010年4月，x264項目組宣布藍光格式影片編碼功能完成，使得x264成為首個免費的藍光影片編碼器。</p>
 <p>資料來源: <a href="https://zh.wikipedia.org/wiki/X264">https://zh.wikipedia.org/wiki/X264</a> (Wiki)</p>
-<p></p><br />簡介 << <a href='簡介.html'>Previous</a> <a href='Assignment 1.html'>Next</a> >> Assignment 1</div>
+<br />簡介 << <a href='簡介.html'>Previous</a> <a href='Assignment.html'>Next</a> >> Assignment</div>
         
     <!-- footer -->
       <div class="container">
